[tool.poetry]
name = "comdao"
version = "0.1.0"
description = "commune discord DAO"
authors = ["supreme <zimulajan0@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
communex = "^0.1.3"
validators = "^0.23.1"
substrate-interface = "1.7.4"
py-cord = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
