[tool.poetry]
name = "comdao"
version = "0.1.0"
description = "commune multisig DAO"
authors = ["SupremeSource <zimulajan0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.5.0"
validators = "^0.18.2"
substrate-interface = "^1.1.0"
communex = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
