[tool.poetry]
name = "comdao"
version = "0.1.0"
description = "commune multisig DAO"
authors = ["SupremeSource <zimulajan0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.5.0"
validators = "^0.18.2"
substrate-interface = "^1.1.0"
communex = "^0.1.0"
tabulate = "^0.9.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
